# bnn-code

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Cargo.toml  DEEPIN_STORE.md  EDITOR_INTEGRATION.md  LICENSE  PR_DESCRIPTION.md  README.md  ROADMAP.md  build-deb.sh  llms.txt  workspace-f1b35856-e6da-4942-8aa6-19030edce29f (1).tar
.bnn/: bnn-code.db  config.json
.github/workflows/: release.yml
.qwen/: settings.json
agent/core/: openagent.md  opencoder.md
agent/meta/: repo-manager.md  system-builder.md
codebert_env/: pyvenv.cfg
command/: add-context.md  build-context-system.md  context.md  validate-repo.md
command/openagents/: check-context-deps.md
command/prompt-engineering/: prompt-enhancer.md
context/: navigation.md
context/core/: context-system.md  visual-development.md
context/openagents-repo/: quick-start.md
context/project/: project-context.md
context/project-intelligence/: navigation.md
context/system-builder-templates/: SYSTEM-BUILDER-GUIDE.md
nvim-plugin/doc/: bnn.txt
nvim-plugin/plugin/: bnn.vim
scripts/: download_model.py  download_model.sh  install-neovim.sh  install-vscode.sh
skills/context7/: library-registry.md
src/: cli.rs  lib.rs  main.rs  repl.rs
src/indexer/: chunker.rs  database.rs  mod.rs  parser.rs
src/inference/: bnn.rs  mod.rs  onnx.rs  tokenizer.rs
src/retrieval/: mod.rs  reranker.rs  search.rs
src/rogue/: ai_output.rs  code_smell.rs  mod.rs  security.rs  user_behavior.rs
src/ui/: mod.rs  streaming.rs  (+1 more)
tests/: integration_test.rs
vscode-extension/: package.json
workspace-f1b35856-e6da-4942-8aa6-19030edce29f (1)/: workspace-f1b35856-e6da-4942-8aa6-19030edce29f (1).tar.uncompressed
(+44 files in other folders)
